Fix CSS position of bento dashboard cards to prevent cutoff

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -91,19 +91,19 @@
 /* Positions */
 .card-top-left {
   top: 5%;
-  left: -5%;
+  left: 5%;
   width: 240px;
 }
 
 .card-center-right {
   top: 30%;
-  right: -10%;
+  right: -5%;
   width: 260px;
 }
 
 .card-bottom-left {
   bottom: 0%;
-  left: 10%;
+  left: 20%;
   width: 240px;
 }
 
